# bitcoin

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  batchwrite-plot.py  crash-coins_view  disconnectpool-llm-handoff.txt  justfile  shell.nix  vcpkg.json  witness_heavy_multisig_script.txt
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py  ci-windows.py
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: benchmark.yml  ci.yml  publish-results.yml  sync_upstream.yml
bench-ci/: build_binaries.sh  parse_and_plot.py  run-assumeutxo-bench.sh  run-benchmark-instrumented.sh  run-benchmark.sh
bench-ci/guix/: guix-build  manifest.scm
ci/lint/: 01_install.sh  04_install.sh
ci/test/: 00_setup_env.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_native.sh  00_setup_env_native_asan.sh  00_setup_env_native_centos.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_iwyu.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_tidy.sh  00_setup_env_native_valgrind.sh  01_base_install.sh  03_test_script.sh
cmake/: bitcoin-build-config.h.in  introspection.cmake  leveldb.cmake
cmake/module/: AddBoostIfNeeded.cmake  FindQt.cmake  Maintenance.cmake
cmake/script/: GenerateBuildInfo.cmake
contrib/: historical_reorg_proxy.py  run_latest_reorg_tmux.sh
contrib/debian/: copyright
contrib/devtools/: check-deps.sh  circular-dependencies.py  count-contributors.py  gen-manpages.py  headerssync-params.py  witness-heavy-multisig-infographic.py
contrib/devtools/bitcoin-tidy/: CMakeLists.txt  bitcoin-tidy.cpp  example_field-observers.cpp  expected_field-observers.cpp  field-observers.cpp  field-observers.h
contrib/docker/: Dockerfile
contrib/guix/: guix-build  guix-codesign  manifest.scm  manifest_build.scm  security-check.py  symbol-check.py
contrib/init/: bitcoind.openrc
contrib/txindex/: txindex-lookup-bench.py
depends/: Makefile  README.md  funcs.mk  toolchain.cmake.in
doc/: README.md  REST-interface.md  benchcoin.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  compiler-optimization-investigation.md  dependencies.md  developer-notes.md  files.md  fuzzing.md  historical_reorg_proxy.md  init.md  performance-investigation-handover.md  reduce-memory.md  release-notes-0.md  release-notes-29662.md  release-notes-31375-31679.md  release-notes-34641.md  release-notes-35463.md  release-notes-35465.md  release-notes-35531.md  release-notes.md  release-process.md  tor.md  utxo-performance-investigation.md  zmq.md
doc/benchmarks/: siphash.md
doc/design/: libraries.md
doc/knots-port-audit/: README.md
doc/man/: bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1
doc/policy/: mempool-replacements.md  packages.md
issue-35298/: .gitignore  chainstate_age.py  completion-audit.md  monitor.sh  parse_compactions.py  report.md  reproducers.md  seek-compaction-patch-notes.md  summarize_io.py
rebase_assessment/: commit_assessments.tsv  commit_queue.txt
share/: setup.nsi.in
share/examples/: bitcoin.conf
share/rpcauth/: rpcauth.py
src/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile.test.include  addrman.cpp  addrman.h  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  cluster_linearize.h  codex32.cpp  coins.cpp  coins.h  coinsviewcacheasync.h  coinsviewcachecontroller.h  (+99 more)
src/bench/: CMakeLists.txt  addrman.cpp  block_assemble.cpp  block_generator.cpp  block_generator.h  blockencodings.cpp  blockstorage.cpp  ccoins_caching.cpp  (+44 more)
src/test/: CMakeLists.txt  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  argsman_tests.cpp  arith_uint256_tests.cpp  banman_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  baseindex_tests.cpp  bech32_tests.cpp  bip324_tests.cpp  bip328_tests.cpp  bip32_tests.cpp  bip54_tests.cpp  block_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockfilter_tests.cpp  blockmanager_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  btcsignals_tests.cpp  caches_tests.cpp  chain_tests.cpp  chainparams_tests.cpp  chainstate_write_tests.cpp  checkqueue_tests.cpp  cluster_linearize_tests.cpp  codex32_tests.cpp  coins_tests.cpp  coinscachepair_tests.cpp  coinstatsindex_tests.cpp  coinsviewcacheasync_tests.cpp  coinsviewoverlay_tests.cpp  common_url_tests.cpp  compress_tests.cpp  crypto_tests.cpp  (+106 more)
src/test/data/: script_tests.json  siphash.json  tx_valid.json
src/test/fuzz/: CMakeLists.txt  FuzzedDataProvider.h  addition_overflow.cpp  addrman.cpp  asmap.cpp  asmap_direct.cpp  autofile.cpp  banman.cpp  base_encode_decode.cpp  bech32.cpp  bip324.cpp  bitdeque.cpp  bitset.cpp  block.cpp  block_header.cpp  block_index.cpp  block_index_tree.cpp  blockfilter.cpp  bloom_filter.cpp  buffered_file.cpp  cache_sizes.cpp  chain.cpp  chainstate_lifecycle.cpp  checkqueue.cpp  cluster_linearize.cpp  cmpctblock.cpp  coins_view.cpp  coinscache_sim.cpp  coinsviewcacheasync.cpp  connman.cpp  crypto.cpp  crypto_aes256.cpp  crypto_aes256cbc.cpp  crypto_chacha20.cpp  crypto_chacha20poly1305.cpp  crypto_common.cpp  crypto_diff_fuzz_chacha20.cpp  crypto_hkdf_hmac_sha256_l32.cpp  crypto_poly1305.cpp  cuckoocache.cpp  (+107 more)
src/test/fuzz/util/: mempool.cpp  mempool.h  net.cpp  net.h  wallet.h
src/test/kernel/: test_kernel.cpp
src/test/util/: CMakeLists.txt  chainstate.h  check.h  cluster_linearize.h  common.h  mining.cpp  net.cpp  net.h  poolresourcetester.h  setup_common.cpp  setup_common.h  torcontrol.h  transaction_utils.cpp  transaction_utils.h  txmempool.cpp  txmempool.h  validation.cpp  validation.h
test/: CMakeLists.txt  config.ini.in  get_previous_releases.py
(+775 files in other folders)
